--- a/.gitignore
+++ b/.gitignore
@@ -11,9 +11,9 @@
 *.userprefs
 
 # Build results
+DoodleJump/Release/DoodleJump.tlog
 [Dd]ebug/
 [Dd]ebugPublic/
-[Rr]elease/
 [Rr]eleases/
 x64/
 x86/
