--- a/DoodleJump/DoodleJump/DoodleJump.vcxproj
+++ b/DoodleJump/DoodleJump/DoodleJump.vcxproj
@@ -157,8 +157,12 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="GameOverScene.h" />
+    <ClInclude Include="GameScene.h" />
+    <ClInclude Include="PauseScene.h" />
     <ClInclude Include="sheet.h" />
     <ClInclude Include="resource.h" />
+    <ClInclude Include="StartScene.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
@@ -167,7 +171,11 @@
     <ClCompile Include="Doodle.cpp" />
     <ClCompile Include="DoodleJump.cpp" />
     <ClCompile Include="Game.cpp" />
+    <ClCompile Include="GameOverScene.cpp" />
+    <ClCompile Include="GameScene.cpp" />
+    <ClCompile Include="PauseScene.cpp" />
     <ClCompile Include="Plates.cpp" />
+    <ClCompile Include="StartScene.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
