Added & included more textures
Signed-off-by: eligantRU <eligant.ru@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -210,3 +210,5 @@ GeneratedArtifacts/
 _Pvt_Extensions/
 ModelManifest.xml
 /DoodleJump/DoodleJump/Release/DoodleJump.tlog
+/DoodleJump/DoodleJump/*.vcxproj
+/DoodleJump/DoodleJump/*.filters
