Refactoring: changed file names
Signed-off-by: eligantRU <eligant.ru@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -212,3 +212,4 @@ ModelManifest.xml
 /DoodleJump/DoodleJump/Release/DoodleJump.tlog
 /DoodleJump/DoodleJump/*.vcxproj
 /DoodleJump/DoodleJump/*.filters
+/DoodleJump/DoodleJump/ReadMe.txt
