--- a/DoodleJump/DoodleJump/DoodleJump.vcxproj
+++ b/DoodleJump/DoodleJump/DoodleJump.vcxproj
@@ -32,6 +32,7 @@
     <ClInclude Include="plates.h" />
     <ClInclude Include="DoodleJumpRes.h" />
     <ClInclude Include="sheet.h" />
+    <ClInclude Include="SoundHandler.h" />
     <ClInclude Include="StartScene.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
@@ -48,6 +49,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="PauseScene.cpp" />
     <ClCompile Include="Plates.cpp" />
+    <ClCompile Include="SoundHandler.cpp" />
     <ClCompile Include="StartScene.cpp" />
     <ClCompile Include="stdafx.cpp" />
   </ItemGroup>
