Split too large file GameScene.cpp into several small files
Signed-off-by: eligantRU <eligant.ru@gmail.com>

--- a/DoodleJump/DoodleJump/DoodleJump.vcxproj
+++ b/DoodleJump/DoodleJump/DoodleJump.vcxproj
@@ -45,6 +45,11 @@
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="GameOverScene.cpp" />
     <ClCompile Include="GameScene.cpp" />
+    <ClCompile Include="GameScene_Bonuses.cpp" />
+    <ClCompile Include="GameScene_Doodle.cpp" />
+    <ClCompile Include="GameScene_Events.cpp" />
+    <ClCompile Include="GameScene_Hole.cpp" />
+    <ClCompile Include="GameScene_Plates.cpp" />
     <ClCompile Include="HelpScene.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="PauseScene.cpp" />
